feat: 添加用于Colab的笔记本

--- a/NeuralRecon-W-test/config/train_brandenburg_gate.yaml
+++ b/NeuralRecon-W-test/config/train_brandenburg_gate.yaml
@@ -86,4 +86,4 @@ TRAINER:
   LR_SCHEDULER: 'none'
   SAVE_DIR: './checkpoints'
   VAL_FREQ: 10000.0
-  SAVE_FREQ: 10000
+  SAVE_FREQ: 10000    # 保存频率
