--- a/NeuralRecon-W-test/requirements.txt
+++ b/NeuralRecon-W-test/requirements.txt
@@ -1,5 +1,6 @@
 
 # 此处少了torchvision、kaolin，且从mmcv来看torch需要1.11
+# kaolin [6]
 
 # 一系列补充的
 #torch==1.11.0
@@ -11,21 +12,21 @@
 cython==0.29.20
 
 
-pytorch-lightning==1.4.8
-torchmetrics==0.7.0
+#pytorch-lightning==1.4.8
+torchmetrics==0.7.0	# [8]
 einops==0.3.0
-test-tube==0.7.5
-kornia==0.4.1
+test-tube==0.7.5	# [10]
+kornia==0.4.1	# [2]
 opencv-python==4.5.1.48
 matplotlib==3.3.3
 jupyter
 imageio==2.9.0
 imageio-ffmpeg==0.4.2
 pandas==1.1.5
-torch_optimizer
-lpips==0.1.3
-loguru
-yacs
+torch_optimizer	# [4] 自动是0.3.0版本
+lpips==0.1.3	# [7]
+loguru	# [3]
+yacs		# [9]
 h5py
 
 # for phototourism visualization
@@ -34,14 +35,14 @@ plotly==4.14.3
 # for mesh
 PyMCubes==0.1.2
 pycollada==0.7.1
-trimesh==3.9.1
+trimesh==3.9.1	# [5]
 pyglet==1.5.10
 networkx==2.5
 scikit-image
 
 # for point cloud
-plyfile==0.7.2
-open3d==0.12.0
+plyfile==0.7.2	# colab会在安装0.12.0版o3d时自动安装0.7.4的plyfile
+open3d==0.12.0	# [1]
 
 # mmsegmentation
 mmcv-full -f https://download.openmmlab.com/mmcv/dist/cu113/torch1.11/index.html
